kube-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoip-test-updater
  labels:
    app: geoip-test
    part: updater
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geoip-test
      part: updater
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: geoip-test
        part: updater
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: geoip-test-data
      containers:
        - name: updater
          image: maxmindinc/geoipupdate
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/usr/share/GeoIP"
              name: data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoip-test-rpc
  labels:
    app: geoip-test
    part: rpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geoip-test
      part: rpc
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: geoip-test
        part: rpc
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: geoip-test-data
      containers:
        - name: updater
          image: as207960/geoip:3
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/data"
              name: data
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: geoip-test
spec:
  podSelector:
    matchLabels:
      app: geoip-test
  policyTypes:
  - Ingress
